--- a/lib/facebook-php-sdk/composer.json
+++ b/lib/facebook-php-sdk/composer.json
@@ -17,7 +17,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.0",
         "mockery/mockery": "~0.8",
-        "guzzlehttp/guzzle": "~5.0"
+        "guzzlehttp/guzzle": 6.5.6
     },
     "suggest": {
         "paragonie/random_compat": "Provides a better CSPRNG option in PHP 5",
